# datapreprocessor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  ci.yml
datapreprocessor/app/dataimputation/: data_imputation_config.json  data_imputation_postprocessing.py  data_imputation_preprocessing.py  model_utilities.py  node_load_data_imputation_train_model.py
datapreprocessor/app/model_utilities/: model_save_load_utilities.py
datapreprocessor/federates/dataimputation/: component_definition.json  config_dataimputation.json  federate_dataimputation.py  input_mapping.json  static_inputs.json
datapreprocessor/microservice/: data_model.py  server.py
tests/: test_federate.py  test_microservice.py
