[project]
name = "datapreprocessor"
version = "0.1.0"
description = "OEDISI data preprocessing algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "helics>=3.6.1",
    "numpy>=2.4.2",
    "oedisi~=3.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
]
